force-app/main/default/objects/Budget_Snapshot__c/Budget_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Budget Snapshot</label>
    <nameField>
        <label>Budget Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budget Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>