force-app/main/default/objects/Budget_Snapshot__c/fields/Current_Gap__c.field-meta.xml
<CustomField>
    <fullName>Current_Gap__c</fullName>
    <label>FM MRR Current Gap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>