force-app/main/default/objects/Budget_Snapshot__c/fields/Execution_Time__c.field-meta.xml
<CustomField>
    <fullName>Execution_Time__c</fullName>
    <label>Execution Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>