force-app/main/default/objects/Budget_Snapshot__c/fields/FM_MRR_Quota_Amount__c.field-meta.xml
<CustomField>
    <fullName>FM_MRR_Quota_Amount__c</fullName>
    <label>FM MRR Quota Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>