force-app/main/default/objects/Budget_Snapshot__c/fields/Forecasted_Gap__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Gap__c</fullName>
    <label>FM MRR Forecasted Gap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>