force-app/main/default/objects/Budget_Snapshot__c/fields/Forecasted_percent__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_percent__c</fullName>
    <label>FM MRR Forecasted %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>