force-app/main/default/objects/Budget_Snapshot__c/fields/MRR_Actuals__c.field-meta.xml
<CustomField>
    <fullName>MRR_Actuals__c</fullName>
    <label>FM MRR Actuals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>