force-app/main/default/objects/Budget_Snapshot__c/fields/MRR_Leader_Overlay__c.field-meta.xml
<CustomField>
    <fullName>MRR_Leader_Overlay__c</fullName>
    <label>FM MRR Leader Overlay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>