force-app/main/default/objects/Budget_Snapshot__c/fields/Pipeline_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Coverage__c</fullName>
    <label>FM MRR Pipeline Coverage</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>