force-app/main/default/objects/Budget_Snapshot__c/fields/TAS_Actuals__c.field-meta.xml
<CustomField>
    <fullName>TAS_Actuals__c</fullName>
    <label>TAS Actuals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>