force-app/main/default/objects/Budget_Snapshot__c/fields/TAS_Forecasted_Gap__c.field-meta.xml
<CustomField>
    <fullName>TAS_Forecasted_Gap__c</fullName>
    <label>TAS Forecasted Gap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>