force-app/main/default/objects/Budget_Snapshot__c/fields/TAS_Forecasted_percent__c.field-meta.xml
<CustomField>
    <fullName>TAS_Forecasted_percent__c</fullName>
    <label>TAS Forecasted %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>