force-app/main/default/objects/Budget_Snapshot__c/fields/TAS_Pipeline_Coverage__c.field-meta.xml
<CustomField>
    <fullName>TAS_Pipeline_Coverage__c</fullName>
    <label>TAS Pipeline Coverage</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>