force-app/main/default/objects/Budget_Snapshot__c/fields/TAS_Quota_Amount__c.field-meta.xml
<CustomField>
    <fullName>TAS_Quota_Amount__c</fullName>
    <label>TAS Quota Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>