force-app/main/default/objects/Budget_Snapshot__c/fields/TAS_Total_Actual_Weighted__c.field-meta.xml
<CustomField>
    <fullName>TAS_Total_Actual_Weighted__c</fullName>
    <label>TAS Total (Actual+Weighted)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>