force-app/main/default/objects/Budget_Snapshot__c/fields/TAS_Total_Overlay__c.field-meta.xml
<CustomField>
    <fullName>TAS_Total_Overlay__c</fullName>
    <label>TAS Total + Overlay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>