force-app/main/default/objects/Budget_Snapshot__c/fields/TAS_Unweighted_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>TAS_Unweighted_Pipeline__c</fullName>
    <label>TAS Unweighted Pipeline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>