force-app/main/default/objects/Budget_Snapshot__c/fields/Total_Actual_Weighted__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Weighted__c</fullName>
    <label>FM MRR Total (Actual+Weighted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>