force-app/main/default/objects/Budget_Snapshot__c/fields/Total_Forecast_Actual_Weighted_Overlay__c.field-meta.xml
<CustomField>
    <fullName>Total_Forecast_Actual_Weighted_Overlay__c</fullName>
    <label>FM MRR Total + Overlay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>