force-app/main/default/objects/Budget_Snapshot__c/fields/Weighted_MRR__c.field-meta.xml
<CustomField>
    <fullName>Weighted_MRR__c</fullName>
    <label>Weighted FM MRR Piepline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>