force-app/main/default/objects/Budget_Snapshot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Fiscal_Period__c</columns>
    <columns>Execution_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>