force-app/main/default/objects/Budget_Snapshot__c/listViews/Forum_MRR_EU_Snapshots.listView-meta.xml
<ListView>
    <fullName>Forum_MRR_EU_Snapshots</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Fiscal_Period__c</columns>
    <columns>Execution_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Forum MRR Forecasts</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>Europe</value>
    </filters>
    <label>Forum MRR EU Snapshots</label>
</ListView>