force-app/main/default/objects/Budget_Snapshot__c/listViews/TAS_Asia_Snapshots.listView-meta.xml
<ListView>
    <fullName>TAS_Asia_Snapshots</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Fiscal_Period__c</columns>
    <columns>Execution_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>TAS Forecasts</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>Asia</value>
    </filters>
    <label>TAS Asia Snapshots</label>
</ListView>